--- a/Applications.Domains.Core/01-Applications.Domains.Core.csproj
+++ b/Applications.Domains.Core/01-Applications.Domains.Core.csproj
@@ -39,8 +39,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="IRepositoryBase.cs" />
+    <Compile Include="Repositories\IRepositoryBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Models\TreeEntityBase.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\OBear.Core\OBear.Core.csproj">
@@ -52,6 +53,7 @@
       <Name>OBear.Domains</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
