--- a/OBear.Domains/OBear.Domains.csproj
+++ b/OBear.Domains/OBear.Domains.csproj
@@ -40,6 +40,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DomainResource.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>DomainResource.resx</DependentUpon>
+    </Compile>
+    <Compile Include="Entities\AggregateRoot.cs" />
+    <Compile Include="Entities\IAggregateRoot.cs" />
+    <Compile Include="Entities\IEntity.cs" />
+    <Compile Include="Entities\ITreeEntity.cs" />
+    <Compile Include="Entities\TreeEntityBase.cs" />
     <Compile Include="EntityBase.cs" />
     <Compile Include="EntityRepositories\IRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -49,6 +59,12 @@
       <Project>{f1eeb3e0-042c-461e-a672-759d1170538f}</Project>
       <Name>OBear.Core</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="DomainResource.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>DomainResource.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
