--- a/OBear.ApplicationServices/OBear.ApplicationServices.csproj
+++ b/OBear.ApplicationServices/OBear.ApplicationServices.csproj
@@ -38,6 +38,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -45,8 +46,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BatchService.cs" />
+    <Compile Include="DtoBase.cs" />
+    <Compile Include="IBatchService.cs" />
+    <Compile Include="IDto.cs" />
     <Compile Include="Ioc.cs" />
+    <Compile Include="IServiceBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ServiceBase.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -59,6 +66,10 @@
     <ProjectReference Include="..\OBear.DI.Autofac\OBear.DI.Autofac.csproj">
       <Project>{c76b4e9f-1f09-4ba8-bec8-2f51f18fb034}</Project>
       <Name>OBear.DI.Autofac</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\OBear.Domains\OBear.Domains.csproj">
+      <Project>{7f932367-7dc5-4073-9a1d-2b57aa71e9cc}</Project>
+      <Name>OBear.Domains</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
