--- a/Application.Domains.Commons/02-Applications.Domains.Commons.csproj
+++ b/Application.Domains.Commons/02-Applications.Domains.Commons.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Models\Area.Base.cs" />
+    <Compile Include="Models\Area.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Queries\AreaQuery.cs" />
     <Compile Include="Repositories\IAreaRepository.cs" />
