--- a/OBear.Core/OBear.Core.csproj
+++ b/OBear.Core/OBear.Core.csproj
@@ -31,6 +31,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
@@ -46,10 +47,31 @@
     <Compile Include="Datas\IUnitOfWork.cs" />
     <Compile Include="00-Extensions.Convert.cs" />
     <Compile Include="IDependency.cs" />
+    <Compile Include="INullObject.cs" />
+    <Compile Include="Logs\ILog.cs" />
+    <Compile Include="Logs\LogLevel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="R.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>R.resx</DependentUpon>
+    </Compile>
     <Compile Include="Reflection.cs" />
     <Compile Include="Serialize.cs" />
     <Compile Include="Sys.cs" />
+    <Compile Include="Validations\IValidation.cs" />
+    <Compile Include="Validations\IValidationHandler.cs" />
+    <Compile Include="Validations\IValidationRule.cs" />
+    <Compile Include="Validations\Validation.cs" />
+    <Compile Include="Validations\ValidationHandler.cs" />
+    <Compile Include="Validations\ValidationResultCollection.cs" />
+    <Compile Include="Warning.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="R.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+      <LastGenOutput>R.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
