--- a/OBear.Domains/OBear.Domains.csproj
+++ b/OBear.Domains/OBear.Domains.csproj
@@ -46,13 +46,16 @@
       <DependentUpon>DomainResource.resx</DependentUpon>
     </Compile>
     <Compile Include="Entities\AggregateRoot.cs" />
+    <Compile Include="Entities\DomainBase.cs" />
     <Compile Include="Entities\IAggregateRoot.cs" />
     <Compile Include="Entities\IEntity.cs" />
     <Compile Include="Entities\ITreeEntity.cs" />
+    <Compile Include="Entities\StateDescription.cs" />
     <Compile Include="Entities\TreeEntityBase.cs" />
     <Compile Include="EntityBase.cs" />
     <Compile Include="EntityRepositories\IRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ValidationFactory.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\OBear.Core\OBear.Core.csproj">
