--- a/OBear.ApplicationServices/OBear.ApplicationServices.csproj
+++ b/OBear.ApplicationServices/OBear.ApplicationServices.csproj
@@ -52,8 +52,10 @@
     <Compile Include="IDto.cs" />
     <Compile Include="Ioc.cs" />
     <Compile Include="IServiceBase.cs" />
+    <Compile Include="ITreeBatchService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServiceBase.cs" />
+    <Compile Include="TreeBatchService.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
