--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -2,6 +2,7 @@
 <repositories>
   <repository path="..\01-Applications.Presentation.Managements\packages.config" />
   <repository path="..\Applications.Datas.Ef\packages.config" />
+  <repository path="..\Applications.Service.Tests\packages.config" />
   <repository path="..\Applications.Services\packages.config" />
   <repository path="..\OBear.ApplicationServices\packages.config" />
   <repository path="..\OBear.Datas.Ef\packages.config" />
